--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ develop ]
 
+defaults:
+  run:
+    working-directory: ./app
+
 jobs:
   build:
     runs-on: ubuntu-latest
