--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,9 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+defaults:
+  run:
+    working-directory: ./Front/app
 
 jobs:
   build:
